# project-n1

./: .env.example  .gitignore  README.md  assistant.py  flake.nix  main.py  prompts.py  pyproject.toml  server.py
frontend/: astro.config.mjs  package-lock.json  package.json  vitest.config.ts
frontend/src/components/: PushToTalk.test.tsx  PushToTalk.tsx
frontend/src/pages/: index.astro
tests/: test_assistant.py  test_server.py
